[gd_scene load_steps=4 format=3 uid="uid://cjadrhn5gltq4"]

[ext_resource type="Script" path="res://scripts/prefabs/ResultDialog.gd" id="1_djv6h"]

[sub_resource type="SystemFont" id="SystemFont_hgiyd"]
font_names = PackedStringArray("", "Comic Sans MS")

[sub_resource type="SystemFont" id="SystemFont_148sp"]
font_names = PackedStringArray("", "Comic Sans MS")

[node name="ResultDialog" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_djv6h")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -156.0
offset_right = 192.0
offset_bottom = 156.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.481023, 0.026827, 0.192537, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -57.0
offset_top = -60.0
offset_right = 57.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="WinnerLabel" type="Label" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_hgiyd")
theme_override_font_sizes/font_size = 40
text = "Player 
wins!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayAgainButton" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 0
theme_override_fonts/font = SubResource("SystemFont_148sp")
theme_override_font_sizes/font_size = 25
text = "Play again"

[connection signal="pressed" from="ColorRect/VBoxContainer/PlayAgainButton" to="." method="_on_play_again_button_pressed"]
